@@ -286,8 +286,17 @@ static CMPIData getPropQualifier(CMPIConstClass * cc, const char* cp, const char
        rv.type = CMPI_boolean;
        rv.state = CMPI_goodValue;
        rv.value.boolean = 1;
-       return rv;
+
+	/* Modify to update status after finish the procedure */
+	if (rc) { 
+		CMSetStatus(rc, CMPI_RC_OK);
+	}
+	return rv;
      } else {
+	/* Modify to update status after finish the procedure */
+	if (rc) {
+		CMSetStatus(rc, CMPI_RC_ERR_NOT_FOUND);
+	}
        return rv_notFound;
      }
    }
