@@ -1,3 +1,8 @@
+2010-10-14  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* constClass.c:
+	[ 3086143 ] set cmpi status in getPropQualifier
+
 2010-08-25  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* predicate.c:
